Closed Bug 879995 Opened 11 years ago Closed 11 years ago

GStreamer backend crashes with fragmented mp4 video

Categories

(Core :: Audio/Video, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla24

People

(Reporter: eflores, Assigned: eflores)

References

Details

Attachments

(2 files)

Attached video Example file
      No description provided.
Attached patch FixSplinter Review
Well that was delightfully straightforward.
Attachment #758868 - Flags: review?(alessandro.d)
I'll add that video as a test case when I fix bug 880062, any test we add will fail on Windows if we land it before bug 880062 is fixed.
Attachment #758868 - Flags: review?(alessandro.d) → review+
https://hg.mozilla.org/mozilla-central/rev/63e57ae2f15c
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: