Bug 879995 - Fix assertion failure in gstreamer backend with fragmented mp4 videos r=alessandro.d